--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
-		<!-- 
+<!-- 
 		<repository>
 			<id>repo1maven</id>
 			<url>http://repo1.maven.org/maven2/</url>
@@ -28,7 +28,9 @@
 			<releases>
 				<enabled>false</enabled>
 			</releases>
-		</repository>  -->
+		</repository>
+ -->		
+		
 	</repositories>
 	<!-- end 配置多获取地址 -->
 
@@ -50,7 +52,7 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-	
+
 		<!--begin spring依赖包配置 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -182,11 +184,53 @@
 			<version>1.2.17</version>
 		</dependency>
 		<!--end 前端数据优化 -->
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		
+
+		<!--begin testjar -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<!--end testjar -->
 	</dependencies>
 
 	<build><!-- maven 项目管理周期操作 -->
 		<finalName>neig.pointsmanager</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpclient</artifactId>
+						<version>4.5.2</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.json-lib</groupId>
+						<artifactId>json-lib</artifactId>
+						<version>2.4</version>
+						<classifier>jdk15</classifier>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<version>3.0</version>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
