--- a/pom.xml
+++ b/pom.xml
@@ -5,34 +5,7 @@
 	<artifactId>neig.pointsmanager</artifactId><!-- 项目名 -->
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>neig.pointsmanager Maven Webapp</name>
-	<!-- begin 配置多获取地址 -->
-	<repositories>
-		<repository>
-			<id>centralmaven</id>
-			<url>http://central.maven.org/maven2/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-<!-- 
-		<repository>
-			<id>repo1maven</id>
-			<url>http://repo1.maven.org/maven2/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
- -->		
-		
-	</repositories>
-	<!-- end 配置多获取地址 -->
+	<name>neig.pointsmanager</name>
 
 	<!-- begin 通用参数配置 -->
 	<properties>
@@ -45,6 +18,36 @@
 		<log4j.version>2.5</log4j.version>
 	</properties>
 	<!-- end 通用参数配置 -->
+
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>Team Nexus Repository</name>
+			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>nexus</id>
+			<name>Team Nexus Repository</name>
+			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name> Nexus Release Repository </name>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name> Nexus Snapshot Repository </name>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -184,13 +187,24 @@
 			<version>1.2.17</version>
 		</dependency>
 		<!--end 前端数据优化 -->
-		
+
 		<dependency>
-		    <groupId>commons-fileupload</groupId>
-		    <artifactId>commons-fileupload</artifactId>
-		    <version>1.3.2</version>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>alipay</groupId>
+			<artifactId>java-sdk</artifactId>
+			<version>20161121110022</version>
+		</dependency>
+
+		<dependency>
+			<groupId>weixin</groupId>
+			<artifactId>java-sdk</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 		<!--begin testjar -->
 		<dependency>
