--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,18 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 		<!--end testjar -->
+		<dependency>
+			<groupId>sunchin</groupId>
+			<artifactId>Integrated-payment-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build><!-- maven 项目管理周期操作 -->
