--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
 		<repository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -40,12 +40,12 @@
 		<repository>
 			<id>releases</id>
 			<name> Nexus Release Repository </name>
-			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name> Nexus Snapshot Repository </name>
-			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -225,11 +225,7 @@
 			<version>3.1</version>
 		</dependency>
 		<!--end testjar  -->
-		<dependency>
-			<groupId>sunchin</groupId>
-			<artifactId>Integrated-payment-interface</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		
 		
 	</dependencies>
 
