--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,31 @@
 	<!-- end 通用参数配置 -->
 
 	<repositories>
+	
+	<repository>
+                <id>sonatype-nexus-staging</id>
+                <name>Sonatype Nexus Staging</name>
+                <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                <releases>
+                        <enabled>true</enabled>
+                </releases>
+                <snapshots>
+                        <enabled>true</enabled>
+                </snapshots>
+        </repository>
 		<repository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
+			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
 		</repository>
+		
+		
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
+			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -40,12 +54,12 @@
 		<repository>
 			<id>releases</id>
 			<name> Nexus Release Repository </name>
-			<url>http://senlny.iask.in:17482/nexus/content/repositories/releases/</url>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name> Nexus Snapshot Repository </name>
-			<url>http://senlny.iask.in:17482/nexus/content/repositories/snapshots/</url>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -224,9 +238,25 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-		<!--end testjar  -->
+		<!-- 阿里短信 -->
+		<dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>2.4.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-sms</artifactId>
+                <version>3.0.0-rc1</version>
+        </dependency>
 		
-		
+		<!--end testjar 
+		<dependency>
+			<groupId>sunchin</groupId>
+			<artifactId>Integrated-payment-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		 -->
 	</dependencies>
 
 	<build><!-- maven 项目管理周期操作 -->
