--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<repository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
 		</repository>
 		
 		
@@ -44,7 +44,7 @@
 		<pluginRepository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
-			<url>http://127.0.0.1:8081/nexus/content/groups/sunchin/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -54,12 +54,12 @@
 		<repository>
 			<id>releases</id>
 			<name> Nexus Release Repository </name>
-			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name> Nexus Snapshot Repository </name>
-			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots/</url>
+			<url>http://senlny.iask.in:17482/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
