--- a/pom.xml
+++ b/pom.xml
@@ -208,17 +208,24 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>alipay</groupId>
-			<artifactId>java-sdk</artifactId>
-			<version>20161121110022</version>
-		</dependency>
+		   <dependency>
+    <groupId>dom4j</groupId>
+    <artifactId>dom4j</artifactId>
+    <version>1.6.1</version>
+</dependency>
 
-		<dependency>
-			<groupId>weixin</groupId>
-			<artifactId>java-sdk</artifactId>
-			<version>1.0</version>
-		</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.3.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.jdom</groupId>
+    <artifactId>jdom</artifactId>
+    <version>1.1.3</version>
+</dependency>
+		
 
 		<!--begin testjar -->
 		<dependency>
