--- a/pom.xml
+++ b/pom.xml
@@ -20,25 +20,25 @@
 	<!-- end 通用参数配置 -->
 
 	<repositories>
-	
-	<repository>
-                <id>sonatype-nexus-staging</id>
-                <name>Sonatype Nexus Staging</name>
-                <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                <releases>
-                        <enabled>true</enabled>
-                </releases>
-                <snapshots>
-                        <enabled>true</enabled>
-                </snapshots>
-        </repository>
+
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Sonatype Nexus Staging</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 		<repository>
 			<id>nexus</id>
 			<name>Team Nexus Repository</name>
 			<url>http://senlny.iask.in:17482/nexus/content/groups/sunchin/</url>
 		</repository>
-		
-		
+
+
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -208,24 +208,24 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		   <dependency>
-    <groupId>dom4j</groupId>
-    <artifactId>dom4j</artifactId>
-    <version>1.6.1</version>
-</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
 
-<dependency>
-    <groupId>com.google.zxing</groupId>
-    <artifactId>core</artifactId>
-    <version>3.3.0</version>
-</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.jdom</groupId>
-    <artifactId>jdom</artifactId>
-    <version>1.1.3</version>
-</dependency>
-		
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+
 
 		<!--begin testjar -->
 		<dependency>
@@ -247,23 +247,18 @@
 		</dependency>
 		<!-- 阿里短信 -->
 		<dependency>
-                <groupId>com.aliyun</groupId>
-                <artifactId>aliyun-java-sdk-core</artifactId>
-                <version>2.4.2</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aliyun</groupId>
-                <artifactId>aliyun-java-sdk-sms</artifactId>
-                <version>3.0.0-rc1</version>
-        </dependency>
-		
-		<!--end testjar 
-		<dependency>
-			<groupId>sunchin</groupId>
-			<artifactId>Integrated-payment-interface</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+			<version>2.4.2</version>
 		</dependency>
-		 -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-sms</artifactId>
+			<version>3.0.0-rc1</version>
+		</dependency>
+
+		<!--end testjar <dependency> <groupId>sunchin</groupId> <artifactId>Integrated-payment-interface</artifactId> 
+			<version>0.0.1-SNAPSHOT</version> </dependency> -->
 	</dependencies>
 
 	<build><!-- maven 项目管理周期操作 -->
@@ -296,6 +291,15 @@
 				<version>2.4</version>
 				<configuration>
 					<version>3.0</version>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
