--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -2,8 +2,8 @@
 #jdbc.url=jdbc:mysql://192.168.1.32:3306/nssc
 #jdbc.username=bxdz
 #jdbc.password=bxdz123
-jdbc.url=jdbc\:mysql\://localhost\:3306/bxsc
+jdbc.url=jdbc:mysql://192.168.0.203:3306/nssc?characterEncoding=utf-8&useSSL=false
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=ltxadmin
 jdbc.initialSize=2
 jdbc.maxActive=20
