增加短信接口 完善购物车

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,10 +2,11 @@ ns.version=v1.0
 ad.type=ADV_BANNER
 baseimg=http\://shoxgov.iask.in\:17545/
 
-aliyun.sms.accessKey=
-aliyun.sms.accessSecret=
-aliyun.sms.signName=
+aliyun.sms.accessKey=LTAItMB4yvQxzd00
+aliyun.sms.accessSecret=VgnNS3lRtlaoasstUgSp7ZZUjEpj7z
+aliyun.sms.signName=\u8d1d\u7fd4\u5546\u57ce
 aliyun.sms.templateCode=SMS_39300407
+
 
 alichat.appKey=23567441
 alichat.appSecret=91cf3f86d08fdcafce0b473ccda08b99
